src/tests/errors/staticanalysis/naming/procedure_calls_not_procedure_fail.cmp
program procedure_calls_not_procedure_fail
begin
  proc main()
  begin
    Test(0) /* Fail: Call to struct. */
   end;
   struct Test {  x : int }
end